<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_blue_bright"
    android:weightSum="1"
    tools:ignore="NewApi">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/bold_text"
            android:text="@string/number_label"
            android:id="@+id/number_label"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:text="10"
            android:id="@+id/number_value"
            style="@style/bold_text" />

    </LinearLayout>

  <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/_2"
        android:layout_below="@id/_1"
        android:orientation="horizontal">

        <TextView
            style="@style/bold_text"
            android:text="@string/sender_label"
            android:id="@+id/sender_label"/>

        <TextView
            style="@style/text"
            android:text="Замураев Александр Вячеславович"
            android:id="@+id/sender_value"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/_3"
        android:layout_below="@id/_2"
        android:orientation="horizontal">
        <TextView
            style="@style/text"
            android:text="@string/them"
            android:id="@+id/theme"
            android:layout_alignParentStart="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/_4"
        android:layout_below="@id/_3"
        android:orientation="horizontal">

        <TextView
            style="@style/text"
            android:text="Задание"
            android:id="@+id/task" />

    </LinearLayout>

    <ImageView
        android:background="@android:color/transparent"
        android:id="@+id/imageButton_context"
        android:layout_width="30.0dip"
        android:layout_height="40.0dip"
        android:layout_margin="5dp"
        android:src="@drawable/ic_menu_moreoverflow"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true" />


</RelativeLayout>